# AWS_presentation

./: .gitignore  PRESENTATION.html  PRESENTATION.md  README.md  aws_api_cli.sh  aws_cli.sh  aws_lambda_cli.sh  aws_sam_cli.sh  cleanup.sh  main.py  marp-cli.sh  og_main.py  plan.md  presentation_notes.md  pyproject.toml  template.yaml  test.js  test_event.json
K6 tests/: env.json  event_get.json  event_post.json  inline_policy.json  short_python_test.js
presentation/: PRESENTATION.html  PRESENTATION.md  presentation.html  presentation.md
python_src/: main.py
src/: python_lambda.py
